...
struct LearningView: View {
    
    @EnvironmentObject var learningQuizViewModel: LearningQuizViewModel
    
    @StateObject var learningViewModel = LearningViewModel()
  
    let buttonText = "Start"
    
    var body: some View {
        NavigationView {
            ScrollView(showsIndicators: false) {
                NavigationLink(destination: LearningViewQuiz(), isActive: $learningViewModel.showView) {EmptyView()}
                VStack(spacing: 20) {
                    Spacer()

                    Text("Section 1").font(.system(size: 20))

                    HStack(){
                        ProgressView("Beginner", value: learningViewModel.beginner, total: 100)
                            .progressViewStyle(CircledProgressBar())
                    }

...
